# 2DCurveAnimations

./: CMakeLists.txt
include/: raylib.h  raymath.h
src/: Main.cpp
